@@ -6,6 +6,7 @@ package com.victorbetoni.alugacar.enums;
 
 import static com.victorbetoni.alugacar.enums.ModeloMotocicleta.values;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -47,7 +48,7 @@ public enum ModeloVan {
     }
     
     public List<ModeloVan> buscarPorMarca(Marca marca) {
-        return Stream.of(values()).filter(x -> x.marca == marca).toList();
+        return Stream.of(values()).filter(x -> x.marca == marca).collect(Collectors.toList());
     }
     
     public static ModeloVan getByName(String nome) {
